2010-09-01  Stas Boukarev  <stassats@gmail.com>

	* swank-sbcl.lisp (background-save-image): add #-win32, because it
	uses symbols not present on win32.
	Reported by Holly Styles.

2010-08-31  Stas Boukarev  <stassats@gmail.com>

	* swank-cmucl.lisp (foreign-frame-p, gdb-exec, frame-ip): Sparc
	support.
	Patch by Raymond Toy.

2010-08-31  Nikodemus Siivola  <nikodemus@random-state.net>

	* swank-sbcl.lisp (make-dspec): Elide the function name when
	generating a VOP description, since the VOP name is more useful
	and is the first part of the source-description list.

2010-08-28  Stas Boukarev  <stassats@gmail.com>

	* swank-cmucl.lisp (*gdb-program-name*): Determine gdb location
	from PATH.
	(gdb-exec): Use *gdb-program-name* instead of "gdb".
	(gdb-command): Mac OS X compatibility.
	Patch by Raymond Toy.

2010-08-25  Stas Boukarev  <stassats@gmail.com>

	* swank-sbcl.lisp (exec-image): Use (car sb-ext:*posix-argv*) if
	SBCL doesn't have sb-ext:*runtime-pathname*.
	Reported by Vinay.

2010-08-22  Stas Boukarev  <stassats@gmail.com>

	* slime.el (slime-xemacs-recompute-modelines): Add
	`slime-xemacs-recompute-modelines' to `pre-idle-hook', this solves
	the problem of synchronization of modelines.
	Thanks to Aidan Kehoe.

2010-08-21  Stas Boukarev  <stassats@gmail.com>

	* slime.el (slime-recompute-modelines): Recompute modelines only
	for visible buffers. Kludge: modeline can be out of sync if the buffer
	becomes visible and no slime/lisp interaction took place yet.
	Patch by Raymond Toy.
	(slime-search-buffer-package): Revert, with the above
	change caching shouldn't be necessary.

2010-08-21  Helmut Eller  <heller@common-lisp.net>

	Add commands to enable/disable contribs.

	* slime.el (slime-enable-contrib, slime-disable-contrib): New.
	(slime-contrib): New struct to collect meta-data about contribs.
	(define-slime-contrib): Store meta-data in 'slime-contribs plist.
	(slime-all-contribs, slime-find-contrib, slime-read-contrib-name):
	New helpers.
